--- a/source/catalog.html
+++ b/source/catalog.html
@@ -33,7 +33,9 @@
       </nav>
     </div>
   </header>
-  <main class="page-main"></main>
+  <main class="page-main">
+    <h1></h1>
+  </main>
 </body>
 
 </html>
