Стилизация страницы формы

--- a/source/index.html
+++ b/source/index.html
@@ -109,30 +109,30 @@
     <h1 class="visually-hidden">Pink - мобильное приложение для раскрашивания серых будней в розовый цвет.</h1>
 
     <section class="download">
-
-      <h2 class="visually-hidden">Скачать приложение</h2>
-      <div class="download__wrapper">
-        <p class="download__slogan">Взгляните на жизнь иначе!</p>
-      </div>
-      <a class="download__link" href="https://www.apple.com/ru/app-store/">Скачать приложение</a>
-      <div class="img-os-block">
-        <div class="img-os-block__link-block">
-          <a class="img-os-block__link" href="https://www.apple.com/ru/app-store/">
-            <img src="./img/apple-logo.svg" width="47" height="56" alt="Логотип Apple - яблоко">
-          </a>
-
-          <a class="img-os-block__link" href="https://play.google.com/store/apps?hl=ru">
-            <img src="./img/android-logo.svg" width="43" height="47" alt="Логотип Android - робот">
-          </a>
-
-          <a class="img-os-block__link" href="https://www.microsoft.com/ru-RU/store/apps">
-            <img src="./img/microsoft-logo.svg" width="44" height="41"
-              alt="Логотип Microsoft - квадрат состоящий из четырёх равных квадратов; сверху - красный и зелёный, снизу - голубой и жёлтый">
-          </a>
+      <div class="download__container">
+        <h2 class="visually-hidden">Скачать приложение</h2>
+        <div class="download__wrapper">
+          <p class="download__slogan">Взгляните на жизнь иначе!</p>
         </div>
-        <p class="img-os-block__text">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
-      </div>
+        <a class="download__link" href="https://www.apple.com/ru/app-store/">Скачать приложение</a>
+        <div class="img-os-block img-os-block__positioning">
+          <div class="img-os-block__link-block">
+            <a class="img-os-block__link" href="https://www.apple.com/ru/app-store/">
+              <img src="./img/apple-logo.svg" width="47" height="56" alt="Логотип Apple - яблоко">
+            </a>
 
+            <a class="img-os-block__link" href="https://play.google.com/store/apps?hl=ru">
+              <img src="./img/android-logo.svg" width="43" height="47" alt="Логотип Android - робот">
+            </a>
+
+            <a class="img-os-block__link" href="https://www.microsoft.com/ru-RU/store/apps">
+              <img src="./img/microsoft-logo.svg" width="44" height="41"
+                alt="Логотип Microsoft - квадрат состоящий из четырёх равных квадратов; сверху - красный и зелёный, снизу - голубой и жёлтый">
+            </a>
+          </div>
+          <p class="img-os-block__text">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+        </div>
+      </div>
     </section>
 
     <section class="characteristic">
@@ -339,27 +339,27 @@
         <a
           href="https://www.google.ru/maps/place/%D0%91%D0%BE%D0%BB%D1%8C%D1%88%D0%B0%D1%8F+%D0%9A%D0%BE%D0%BD%D1%8E%D1%88%D0%B5%D0%BD%D0%BD%D0%B0%D1%8F+%D1%83%D0%BB.,+19%2F8,+%D0%A1%D0%B0%D0%BD%D0%BA%D1%82-%D0%9F%D0%B5%D1%82%D0%B5%D1%80%D0%B1%D1%83%D1%80%D0%B3,+191186/@59.9387165,30.3208587,17z/data=!3m1!4b1!4m5!3m4!1s0x4696310fca145cc1:0x42b32648d8238007!8m2!3d59.9387165!4d30.3230474">
           <picture>
-            <!-- <source type="image/webp" media="(min-width: 1150px)" srcset="
-                ./img/webp/catalog/photo-hare-desktop@1x.webp 1x,
-                ./img/webp/catalog/photo-hare-desktop@2x.webp 2x
+            <source type="image/webp" media="(min-width: 1200px)" srcset="
+                ./img/map-desktop@1x.webp 1x,
+                ./img/map-desktop@2x.webp 2x
               " />
-            <source type="image/webp" media="(min-width: 785px)" srcset="
-                ./img/webp/catalog/photo-hare-tablet@1x.webp 1x,
-                ./img/webp/catalog/photo-hare-tablet@2x.webp 2x
+            <source type="image/webp" media="(min-width: 660px)" srcset="
+                ./img/map-tablet@1x.webp 1x,
+                ./img/map-tablet@2x.webp 2x
               " />
             <source type="image/webp" media="(min-width: 320px)" srcset="
-                ./img/webp/catalog/photo-hare-tablet@1x.webp 1x,
-                ./img/webp/catalog/photo-hare-tablet@2x.webp 2x
-              " /> -->
+                ./img/modile-map@1x.webp 1x,
+                ./img/modile-map@2x.webp 2x
+              " />
             <source media="(min-width: 1200px)" srcset="
-                ./img/map-desktop@1x.png       1x,
-                ./img/map-desktop@2x.png       2x
+                ./img/map-desktop@1x.jpg       1x,
+                ./img/map-desktop@2x.jpg       2x
               " />
             <source media="(min-width: 660px)" srcset="
-                ./img/map-tablet@1x.png       1x,
-                ./img/map-tablet@2x.png       2x
+                ./img/map-tablet@1x.jpg       1x,
+                ./img/map-tablet@2x.jpg       2x
               " />
-            <img class="map__image" src="./img/mobile-map@1x.png" srcset="./img/mobile-map@2x.png 2x"
+            <img class="map__image" src="./img/mobile-map@1x.jpg" srcset="./img/mobile-map@2x.jpg 2x"
               alt="Фотография карты окрестностей" />
           </picture>
 
@@ -415,8 +415,9 @@
       <div class="footer__developer-block">
         <p class="footer__developer-text">Разработано</p>
         <a class="footer__developer-link" href="https://htmlacademy.ru/intensive/htmlcss">
-          <svg width="27" height="34" viewBox="0 0 27 34" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path
+          <svg class="footer__developer-logo" width="27" height="34" viewBox="0 0 27 34" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <path class="footer__developer-logo-pass"
               d="M13.6426 0.0157537L13.5 0L0 1.40733V26.0129L13.5 34L27 26.0129V1.40733L13.6426 0.0157537ZM25.2344 25.0151L13.5 31.9573L1.76561 25.0151V14.9293L13.4507 21.8451L13.4701 23.0984L5.45351 18.3548L5.44295 19.5801L13.4894 24.3885L13.5088 25.675L5.46408 20.9174L5.45351 22.1427L13.5 26.9511L21.6239 22.1182V20.8929V16.909L25.2432 14.7595L25.2344 25.0151ZM25.2344 13.4519L22.0147 15.3319L20.5325 16.2071L13.4666 12.0201L13.456 13.2454L19.4957 16.818L19.4429 16.8495L19.3126 16.9247L18.4536 17.4166L13.4666 14.4689L13.456 15.6942L17.3921 18.0222L16.4591 18.6314L16.438 18.6436L13.4666 16.902L13.456 18.1273L15.4029 19.2615L13.4155 20.4483L1.7973 13.5762L13.4349 6.61831L25.2344 13.4519ZM25.2344 12.2266L13.4401 5.31075L1.76561 12.2196V2.9897L13.5 1.76442L25.2344 2.9897V12.2266Z"
               fill="#D22856" />
           </svg>
