Стилизация страницы каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -119,8 +119,32 @@
       <section class="main-photo">
         <h2 class="main-photo__title">Панорама дня</h2>
         <div class="main-photo__img-wrap">
-          <img src="./img/panorama-mobile.jpg" alt="Вид с вершины опоры вантового моста на изгиб горной реки"
-            class="main-photo__img">
+          <picture>
+            <source type="image/webp" media="(min-width: 1200px)" srcset="
+            ./img/panorama-desktop@1x.webp 1x,
+            ./img/panorama-desktop@2x.webp 2x
+          " />
+            <source type="image/webp" media="(min-width: 660px)" srcset="
+            ./img/panorama-tablet@1x.webp 1x,
+            ./img/panorama-tablet@2x.webp 2x
+          " />
+            <source type="image/webp" media="(min-width: 320px)" srcset="
+            ./img/panorama-mobile@1x.webp 1x,
+            ./img/panorama-mobile@2x.webp 2x
+          " />
+            <source media="(min-width: 1200px)" srcset="
+              ./img/panorama-desktop@1x.jpg 1x,
+              ./img/panorama-desktop@2x.jpg 2x
+            " />
+            <source media="(min-width: 660px)" srcset="
+            ./img/panorama-tablet@1x.jpg 1x,
+            ./img/panorama-tablet@2x.jpg 2x
+            " />
+
+            <img class="main-photo__img" src="./img/panorama-mobile@1x.jpg 1x" srcset="./img/panorama-mobile@2x.jpg 2x"
+              alt="Вид с вершины опоры вантового моста на изгиб горной реки">
+          </picture>
+
         </div>
         <div class="main-photo__description">
           <div class="main-photo__name-wrap">
@@ -162,7 +186,7 @@
                 " />
 
                 <img class="card__img" src="./img/photo-1-mobile@1x.jpg" srcset="./img/photo-1-mobile@2x.jpg 2x"
-                  alt="Вчера он на луну летал, сегодня в руки к нам попал.">
+                  alt="Фотосессия автомобиля.">
               </picture>
             </div>
             <div class="card__description">
@@ -180,6 +204,18 @@
           <li class="card catalog__item">
             <div class="card__img-wrap">
               <picture>
+                <source type="image/webp" media="(min-width: 1200px)" srcset="
+                ./img/photo-2-desktop@1x.webp 1x,
+                ./img/photo-2-desktop@2x.webp 2x
+              " />
+                <source type="image/webp" media="(min-width: 660px)" srcset="
+                ./img/photo-2-tablet@1x.webp 1x,
+                ./img/photo-2-tablet@2x.webp 2x
+              " />
+                <source type="image/webp" media="(min-width: 320px)" srcset="
+                ./img/photo-2-mobile@1x.webp 1x,
+                ./img/photo-2-mobile@2x.webp 2x
+              " />
                 <source media="(min-width: 1200px)" srcset="
                 ./img/photo-2-desktop@1x.jpg 1x,
                 ./img/photo-2-desktop@2x.jpg 2x
@@ -189,9 +225,8 @@
               ./img/photo-2-tablet@2x.jpg 2x
             " />
 
-
                 <img class="card__img" src="./img/photo-2-mobile@1x.jpg" srcset="./img/photo-2-mobile@2x.jpg 2x"
-                  alt="Вчера он на луну летал, сегодня в руки к нам попал.">
+                  alt="Барабанная установка.">
               </picture>
             </div>
             <div class="card__description">
@@ -208,6 +243,18 @@
           <li class="card catalog__item">
             <div class="card__img-wrap">
               <picture>
+                <source type="image/webp" media="(min-width: 1200px)" srcset="
+                ./img/photo-3-desktop@1x.webp 1x,
+                ./img/photo-3-desktop@2x.webp 2x
+              " />
+                <source type="image/webp" media="(min-width: 660px)" srcset="
+                ./img/photo-3-tablet@1x.webp 1x,
+                ./img/photo-3-tablet@2x.webp 2x
+              " />
+                <source type="image/webp" media="(min-width: 320px)" srcset="
+                ./img/photo-3-mobile@1x.webp 1x,
+                ./img/photo-3-mobile@2x.webp 2x
+              " />
                 <source media="(min-width: 1200px)" srcset="
                 ./img/photo-3-desktop@1x.jpg 1x,
                 ./img/photo-3-desktop@2x.jpg 2x
@@ -217,9 +264,8 @@
               ./img/photo-3-tablet@2x.jpg 2x
             " />
 
-
                 <img class="card__img" src="./img/photo-3-mobile@1x.jpg" srcset="./img/photo-3-mobile@2x.jpg 2x"
-                  alt="Вчера он на луну летал, сегодня в руки к нам попал.">
+                  alt="Стеклянный потолок в небоскрёбе.">
               </picture>
             </div>
             <div class="card__description">
@@ -236,6 +282,18 @@
           <li class="card catalog__item">
             <div class="card__img-wrap">
               <picture>
+                <source type="image/webp" media="(min-width: 1200px)" srcset="
+                ./img/photo-4-desktop@1x.webp 1x,
+                ./img/photo-4-desktop@2x.webp 2x
+              " />
+                <source type="image/webp" media="(min-width: 660px)" srcset="
+                ./img/photo-4-tablet@1x.webp 1x,
+                ./img/photo-4-tablet@2x.webp 2x
+              " />
+                <source type="image/webp" media="(min-width: 320px)" srcset="
+                ./img/photo-4-mobile@1x.webp 1x,
+                ./img/photo-4-mobile@2x.webp 2x
+              " />
                 <source media="(min-width: 1200px)" srcset="
                 ./img/photo-4-desktop@1x.jpg 1x,
                 ./img/photo-4-desktop@2x.jpg 2x
@@ -246,7 +304,7 @@
             " />
 
                 <img class="card__img" src="./img/photo-4-mobile@1x.jpg" srcset="./img/photo-4-mobile@2x.jpg 2x"
-                  alt="Вчера он на луну летал, сегодня в руки к нам попал.">
+                  alt="Фруктовый рынок под шатром на краю бахчи.">
               </picture>
             </div>
             <div class="card__description">
@@ -264,7 +322,18 @@
           <li class="card catalog__item">
             <div class="card__img-wrap">
               <picture>
-
+                <source type="image/webp" media="(min-width: 1200px)" srcset="
+                ./img/photo-5-desktop@1x.webp 1x,
+                ./img/photo-1-desktop@2x.webp 2x
+              " />
+                <source type="image/webp" media="(min-width: 660px)" srcset="
+                ./img/photo-5-tablet@1x.webp 1x,
+                ./img/photo-5-tablet@2x.webp 2x
+              " />
+                <source type="image/webp" media="(min-width: 320px)" srcset="
+                ./img/photo-5-mobile@1x.webp 1x,
+                ./img/photo-5-mobile@2x.webp 2x
+              " />
                 <source media="(min-width: 1200px)" srcset="
                 ./img/photo-5-desktop@1x.jpg 1x,
                 ./img/photo-5-desktop@2x.jpg 2x
@@ -275,7 +344,7 @@
             " />
 
                 <img class="card__img" src="./img/photo-5-mobile@1x.jpg" srcset="./img/photo-5-mobile@2x.jpg 2x"
-                  alt="Вчера он на луну летал, сегодня в руки к нам попал.">
+                  alt="Ноги свешившиеся с обрыва, ниже горная долина.">
               </picture>
             </div>
             <div class="card__description">
@@ -292,6 +361,18 @@
           <li class="card catalog__item">
             <div class="card__img-wrap">
               <picture>
+                <source type="image/webp" media="(min-width: 1200px)" srcset="
+                ./img/photo-6-desktop@1x.webp 1x,
+                ./img/photo-6-desktop@2x.webp 2x
+              " />
+                <source type="image/webp" media="(min-width: 660px)" srcset="
+                ./img/photo-6-tablet@1x.webp 1x,
+                ./img/photo-6-tablet@2x.webp 2x
+              " />
+                <source type="image/webp" media="(min-width: 320px)" srcset="
+                ./img/photo-6-mobile@1x.webp 1x,
+                ./img/photo-6-mobile@2x.webp 2x
+              " />
                 <source media="(min-width: 1200px)" srcset="
                 ./img/photo-6-desktop@1x.jpg 1x,
                 ./img/photo-6-desktop@2x.jpg 2x
@@ -301,9 +382,8 @@
               ./img/photo-6-tablet@2x.jpg 2x
             " />
 
-
                 <img class="card__img" src="./img/photo-6-mobile@1x.jpg" srcset="./img/photo-6-mobile@2x.jpg 2x"
-                  alt="Вчера он на луну летал, сегодня в руки к нам попал.">
+                  alt="Вид на крыло, из салона, на фоне солнца и неба.">
               </picture>
             </div>
             <div class="card__description">
@@ -330,6 +410,11 @@
             <div class="post-photo__img-container">
               <a class="post-photo__link-img" href="#">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="
+                  ./img/photo-filter-tablet@1x.webp 1x,
+                  ./img/photo-filter-tablet@1x.webp 1x,
+                  ./img/photo-filter@2x.webp 2x
+                " />
                   <source media="(min-width: 1200px)" srcset="
                   ./img/photo-filter-tablet@1x.jpg 1x,
                   ./img/photo-filter-tablet@2x.jpg 2x
@@ -375,7 +460,7 @@
               </div>
               <div class="post-photo__button-container">
                 <button class="post-photo__btn-sbm btn-round" type="submit">Запостить</button>
-                <button class="post-photo__btn-cancel btn-round btn-round--" type="button">Отмена</button>
+                <button class="post-photo__btn-cancel btn-round btn-round--cancel" type="button">Отмена</button>
               </div>
             </div>
           </div>
