Адаптивная сетка для главной страницы

--- a/source/index.html
+++ b/source/index.html
@@ -156,7 +156,7 @@
             </li>
 
             <li class="characteristic__item characteristic__item--third">
-              <h4 class="characteristic__term">Заводит новых друзей</h4>
+              <h4 class="characteristic__term">Заводит новых&nbsp;друзей</h4>
               <p class="characteristic__term-description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями
                 и
                 заводите новых</p>
@@ -171,8 +171,8 @@
       <h2 class="visually-hidden">Научная статья о приложении</h2>
       <div class="article__container">
         <div class="article__wrapper">
-          <h3 class="article__title">Эффект<br> на 24 часа!</h3>
-          <p class="article__text">Британские ученые провели исследования и доказали, что положительный эффект
+          <h3 class="article__title">Эффект на 24 часа!</h3>
+          <p class="article__text">Британские ученые провели исследования и доказали, что&nbsp;положительный эффект
             от&nbsp;использования приложения длится
             целые&nbsp;сутки!</p>
           <a class="article__link" href="#">Узнать больше об исследовании</a>
@@ -206,6 +206,9 @@
           <span class="reviews__postscript"> 45 лет, водитель</span>
         </li>
       </ul>
+
+      <button class="arrow" type="button"></button>
+      <button class="arrow" type="button"></button>
 
       <ul class="slider-pager reviews-slider-pager__positioning">
         <li class="slider-pager__item ">
