--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
 
 <body class="page-body">
 
-  <header class="page-header">
+  <header class="page-header main-nav">
     <div class="page-header__wrapper">
 
       <a class="logo logo-header" href="#">
@@ -82,9 +82,16 @@
         </svg>
 
       </a>
-      <nav class="main-nav">
+      <nav class="main-nav__nav">
         <button class="main-nav__toggle" type="button">
-          <span class="visually-hidden">Открыть меню</span>
+          <svg class="main-nav__toggle-svg main-nav__toggle-svg--menu" width="50" height="24" viewBox="0 0 50 24"
+            xmlns="http://www.w3.org/2000/svg">
+            <use xlink:href="./img/sprite.svg#open-menu-btn"></use>
+          </svg>
+          <svg class="main-nav__toggle-svg main-nav__toggle-svg--cross" width="23" height="23" viewBox="0 0 23 23"
+            xmlns="http://www.w3.org/2000/svg">
+            <use xlink:href="./img/sprite.svg#close_menu_btn"></use>
+          </svg>
         </button>
         <ul class="main-nav__list">
           <li class="main-nav__item main-nav__item--current">
@@ -207,8 +214,10 @@
         </li>
       </ul>
 
-      <button class="arrow" type="button"></button>
-      <button class="arrow" type="button"></button>
+      <div class="reviews__arrow-block">
+        <button class="arrow" type="button"></button>
+        <button class="arrow" type="button"></button>
+      </div>
 
       <ul class="slider-pager reviews-slider-pager__positioning">
         <li class="slider-pager__item ">
@@ -339,7 +348,7 @@
     <section class="map">
       <div class="map__positioning">
         <h2 class="visually-hidden">Как до нас добраться</h2>
-        <a
+        <a class="map__link"
           href="https://www.google.ru/maps/place/%D0%91%D0%BE%D0%BB%D1%8C%D1%88%D0%B0%D1%8F+%D0%9A%D0%BE%D0%BD%D1%8E%D1%88%D0%B5%D0%BD%D0%BD%D0%B0%D1%8F+%D1%83%D0%BB.,+19%2F8,+%D0%A1%D0%B0%D0%BD%D0%BA%D1%82-%D0%9F%D0%B5%D1%82%D0%B5%D1%80%D0%B1%D1%83%D1%80%D0%B3,+191186/@59.9387165,30.3208587,17z/data=!3m1!4b1!4m5!3m4!1s0x4696310fca145cc1:0x42b32648d8238007!8m2!3d59.9387165!4d30.3230474">
           <picture>
             <source type="image/webp" media="(min-width: 1200px)" srcset="
@@ -350,9 +359,9 @@
                 ./img/map-tablet@1x.webp 1x,
                 ./img/map-tablet@2x.webp 2x
               " />
-            <source type="image/webp" media="(min-width: 320px)" srcset="
-                ./img/modile-map@1x.webp 1x,
-                ./img/modile-map@2x.webp 2x
+            <source type="image/webp" media="(min-width: 1px)" srcset="
+                ./img/map-mobile@1x.webp 1x,
+                ./img/map-mobile@1x.webp 2x
               " />
             <source media="(min-width: 1200px)" srcset="
                 ./img/map-desktop@1x.jpg       1x,
@@ -362,16 +371,15 @@
                 ./img/map-tablet@1x.jpg       1x,
                 ./img/map-tablet@2x.jpg       2x
               " />
-            <img class="map__image" src="./img/mobile-map@1x.jpg" srcset="./img/mobile-map@2x.jpg 2x"
+            <img class="map__image" src="./img/map-mobile@1x.jpg" srcset="./img/map-mobile@1x.jpg 2x"
               alt="Фотография карты окрестностей" />
           </picture>
-
-
         </a>
-
-        <iframe class="inframe-map"
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2393.989479670592!2d30.32096483747593!3d59.93854036427966!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1621885277401!5m2!1sru!2sru"
-          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <div class="map__container">
+          <iframe class="map__inframe"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2393.989479670592!2d30.32096483747593!3d59.93854036427966!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1621885277401!5m2!1sru!2sru"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
       </div>
     </section>
 
@@ -429,7 +437,7 @@
       </div>
     </div>
   </footer>
-
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
